Updated for heroku deployment 3